--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-address",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "vue-address",
   "author": "Jogiter <jogiter.g@gmail.com>",
   "main": "lib/vue-select.min.js",
@@ -107,6 +107,6 @@
   ],
   "repository": {
     "type" : "git",
-    "url" : "https://github.com/jogiter/vue-select"
+    "url" : "https://github.com/Jogiter/vue-address.git"
   }
 }
