--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "@vue/composition-api": "^1.0.0-rc.10",
+    "vue": "2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.2",
+    "@types/node": "^15.6.1",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.1.3",
     "vite": "^2.3.4",
+    "vite-plugin-vue2": "^1.5.1",
     "vue-tsc": "^0.0.24"
   }
 }
