--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "vite-vue-ts",
+  "name": "vite-vue-component",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.10",
-    "vue": "2"
+    "china-division": "^2.5.0",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@types/node": "^15.6.1",
-    "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.1.3",
-    "vite": "^2.3.4",
-    "vite-plugin-vue2": "^1.5.1",
-    "vue-tsc": "^0.0.24"
+    "@vitejs/plugin-vue": "^2.0.0",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vue-tsc": "^0.29.8"
   }
 }
