--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
   },
   "dependencies": {
     "china-division": "^2.5.0",
-    "vue": "^3.2.25"
+    "vue-demi": "^0.12.4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vue": "^3.2.25",
     "vue-tsc": "^0.29.8"
+  },
+  "peerDependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "vue": "^2.0.0 || >=3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   }
 }
